# yoink

./: .env.example  .gitignore  .mcp.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.serena/: project.yml
.serena/memories/: project_overview.md
src/: index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  collections.rs  database.rs  exclusions.rs  hotkey.rs  input_monitor.rs  keyboard.rs  lib.rs  main.rs  paste_helper.rs  qrcode.rs  settings.rs  window.rs
src/components/: App.tsx  ClipboardItem.tsx  ClipboardList.tsx  CollectionsPanel.tsx  PinnedSection.tsx  PreviewPane.tsx  QueueMode.tsx  SearchBar.tsx  SettingsPanel.tsx
src/hooks/: useClipboardMonitor.ts  useGlobalHotkey.ts  useKeyboardNav.ts
src/lib/: stripe.ts  supabase.ts
src/stores/: clipboardStore.ts  hotkeyModeStore.ts  proStore.ts  queueStore.ts  settingsStore.ts
