[package]
name = "yoink"
version = "0.0.0"
description = "A clipboard manager"
authors = ["Charlie"]
edition = "2021"

[lib]
name = "yoink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "yoink"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
sha2 = "0.10"
image = "0.25"
qrcode = "0.14"
log = "0.4"
thiserror = "1"
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit.git", branch = "v2" }
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
# Suppress warnings from objc/cocoa macros (required by tauri-nspanel)
unexpected_cfgs = "allow"
deprecated = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
